[gd_scene load_steps=6 format=3 uid="uid://d23tbf3cq257o"]

[ext_resource type="Theme" uid="uid://dnjawm4lkym68" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_pfr15"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/EffectEditor/EffectLineManager.gd" id="2_uiuuw"]
[ext_resource type="Texture2D" uid="uid://b261vuqbyde61" path="res://addons/HTNDomainManager/PluginSystem/Icons/Trash.svg" id="3_mg8n6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2u3x"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.933333, 0.356863, 0.356863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5t83f"]

[node name="EffectLine" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pfr15")
script = ExtResource("2_uiuuw")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("1_pfr15")
theme_override_styles/hover = SubResource("StyleBoxFlat_n2u3x")
icon = ExtResource("3_mg8n6")

[node name="HSeparator2" type="HSeparator" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_5t83f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="WorldStateKeyLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "World State Key"

[node name="Fields" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionTypeMenu" type="OptionButton" parent="VBoxContainer/Fields"]
unique_name_in_owner = true
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Bool"
popup/item_0/id = 0
popup/item_1/text = "Int"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "String"
popup/item_3/id = 3
popup/item_4/text = "Vector2"
popup/item_4/id = 4
popup/item_5/text = "Vector3"
popup/item_5/id = 5
popup/item_6/text = "World State Key"
popup/item_6/id = 6

[node name="StringValue" type="LineEdit" parent="VBoxContainer/Fields"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Value"

[node name="BoolValue" type="CheckButton" parent="VBoxContainer/Fields"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Is True"

[node name="Vector" type="HBoxContainer" parent="VBoxContainer/Fields"]
unique_name_in_owner = true
layout_mode = 2

[node name="XValue" type="SpinBox" parent="VBoxContainer/Fields/Vector"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="YValue" type="SpinBox" parent="VBoxContainer/Fields/Vector"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="ZValue" type="SpinBox" parent="VBoxContainer/Fields/Vector"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="text_changed" from="VBoxContainer/WorldStateKeyLineEdit" to="." method="_on_world_state_key_text_changed"]
[connection signal="item_selected" from="VBoxContainer/Fields/OptionTypeMenu" to="." method="_on_option_type_menu_item_selected"]
[connection signal="text_changed" from="VBoxContainer/Fields/StringValue" to="." method="_on_string_value_text_changed"]
[connection signal="toggled" from="VBoxContainer/Fields/BoolValue" to="." method="_on_bool_value_toggled"]
[connection signal="value_changed" from="VBoxContainer/Fields/Vector/XValue" to="." method="_on_x_value_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fields/Vector/YValue" to="." method="_on_y_value_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Fields/Vector/ZValue" to="." method="_on_z_value_value_changed"]
